--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -134,6 +134,7 @@ See docs/COPYRIGHT.rdoc for more details.
       <hr class="form--separator" />
 
       <%= f.button t(:button_submit), class: 'button -highlight -highlight -with-icon icon-checkmark' %>
+      <%= toggle_link t(:button_cancel), "reply", {}, { class: 'button' } %>
     <% end %>
     <div id="preview"></div>
   </div>
